# MyAgent

./: .gitignore  AGENT_ACTOR_ARCHITECTURE.md  AGENT_ACTOR_SUMMARY.md  README.md  START_HERE.md  TOOLS_COMPLETION_SUMMARY.md  config.py  execute_tasks.py  generate_test_csv.py  heavy_tasks.txt  requirements.txt  run_agent.py  run_gui.py  run_irym1.sh  test_agent.py  test_data.csv  test_summary_fail.py
app/: agent_pipeline.py
app/irym_1/: api_schema.py
apps/: agent_pipeline.py
apps/irym_1/: README.md  api_schema.py  irym_1.py
apps/myCoder/: README.md  api_schema.py  coder_api.py
core/: utils.py
core/agent/: AGENT_ACTOR_GUIDE.md  __init__.py  agent_actor.py  agent_build.py  agent_loop.py  agent_memory.py  agent_planner.py  agent_reflection.py
core/services/: base_vectordb.py  llm_service.py  loader_services.py  local_llm_service.py  memory_manager.py  semantic_cache.py  task_manager.py  vector_db_service.py
core/tools/: FILES_OVERVIEW.txt  QUICK_REFERENCE.md  README.md  SECURITY_CHECKLIST.md  __init__.py  api_tool.py  base.py  (+8 more)
docs/: ARCHITECTURE.md  BUILD_AGENT_ACTOR_COMPLETE.md  COMPLETION_REPORT.md
gui/: agent_thread.py  main_window.py  signals.py  styles.py
rust_accelerator/: Cargo.toml
rust_accelerator/src/: lib.rs
test/: agent_actor_examples.py  llm_clinet_test.py
tests/: test_actor_tools.py  test_agent.py  test_agent_integrated.py  test_api_key.py  test_bash_direct.py  test_bash_flow.py  test_components_detail.py  test_local_llm_integration.py  test_rate_limit.py  test_reflection.py  test_reflection_isolated.py  test_rust_accelerator.py
(+32 files in other folders)
