[package]
name = "rust_accelerator"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_accelerator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module"] }
numpy = "0.21.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.10.0"
tokenizers = "0.19.1"
dashmap = "5.5.3"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
